--- a/c8_index.html
+++ b/c8_index.html
@@ -78,7 +78,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; 2024, Daniel Kinatukara, IS 117, Newark, NJ</p>
 	</footer>
 </body>
 </html>
