--- a/c8_index.html
+++ b/c8_index.html
@@ -12,10 +12,10 @@
 	<script src ="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="js/jquery.slicknav.min.js"></script>
 	<script type="text/javascript">
-		$(document).ready(function(){
-			$('#nav_menu').slicknav({prependTo:"#mobile_menu});
-						});
-			</script>
+    $(document).ready(function() {
+        $('#nav_menu').slicknav({ prependTo: "#mobile_menu" });
+    });
+</script>
 </head>
 
 <body>
